[gd_scene load_steps=21 format=4 uid="uid://cji484njw6bkf"]

[ext_resource type="Texture2D" uid="uid://r1q88tws3d0g" path="res://Assets/oak_woods_v1.0/background/background_layer_1.png" id="1_1l1k7"]
[ext_resource type="Script" path="res://Script/control.gd" id="1_xbgsd"]
[ext_resource type="Texture2D" uid="uid://dul4q3glwjilm" path="res://Assets/oak_woods_v1.0/oak_woods_tileset.png" id="1_y2p7a"]
[ext_resource type="Texture2D" uid="uid://dlmi40yqoqssy" path="res://Assets/oak_woods_v1.0/background/background_layer_2.png" id="2_6voom"]
[ext_resource type="PackedScene" uid="uid://5pigdmjc46gp" path="res://Scene/character_body_2d.tscn" id="2_a3l6r"]
[ext_resource type="FontFile" uid="uid://dfybesdhat8ud" path="res://Assets/Fonts/vinque rg.otf" id="2_faeyp"]
[ext_resource type="Texture2D" uid="uid://e00poy4kebgw" path="res://Assets/oak_woods_v1.0/background/background_layer_3.png" id="3_20aiw"]
[ext_resource type="PackedScene" uid="uid://bhnawhpxn5fo1" path="res://Scene/Enemy_orc.tscn" id="3_k5m7y"]
[ext_resource type="PackedScene" uid="uid://p1dl7p5b8d1f" path="res://Scene/Killzone_2d.tscn" id="7_7m2o6"]
[ext_resource type="Script" path="res://Script/enemy_health_bar.gd" id="9_82wmc"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_whqa0"]
bg_color = Color(0.11, 0.11, 0.11, 0.372549)

[sub_resource type="LabelSettings" id="LabelSettings_o7kbe"]
font = ExtResource("2_faeyp")
font_size = 38
font_color = Color(1, 0.1, 0.1, 1)
outline_size = 1
outline_color = Color(0.1, 0.1, 0.1, 1)
shadow_color = Color(0, 0, 0, 0.8)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7x23e"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_mcjeg"]
texture = ExtResource("1_1l1k7")
0:0/size_in_atlas = Vector2i(20, 11)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ttx6l"]
texture = ExtResource("2_6voom")
0:0/size_in_atlas = Vector2i(20, 11)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_85goy"]
texture = ExtResource("3_20aiw")
0:0/size_in_atlas = Vector2i(20, 11)
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_082kf"]
sources/0 = SubResource("TileSetAtlasSource_mcjeg")
sources/1 = SubResource("TileSetAtlasSource_ttx6l")
sources/2 = SubResource("TileSetAtlasSource_85goy")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_55b44"]
texture = ExtResource("1_y2p7a")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-7, -7, 7, -7, 7, 7, -7, 7)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-7, -7, 7, -7, 7, 7, -7, 7)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-7, -7, 7, -7, 7, 7, -7, 7)
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-7, -7, 7, -7, 7, 7, -7, 7)
4:0/0 = 0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-7, -7, 7, -7, 7, 7, -7, 7)
5:0/0 = 0
5:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-7, -7, 7, -7, 7, 7, -7, 7)
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
15:0/0 = 0
16:0/0 = 0
18:0/0 = 0
19:0/0 = 0
21:0/0 = 0
22:0/0 = 0
23:0/0 = 0
24:0/0 = 0
25:0/0 = 0
26:0/0 = 0
28:0/0 = 0
29:0/0 = 0
30:0/0 = 0
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-7, -7, 7, -7, 7, 7, -7, 7)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-7, -7, 7, -7, 7, 7, -7, 7)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-7, -7, 7, -7, 7, 7, -7, 7)
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-7, -7, 7, -7, 7, 7, -7, 7)
4:1/0 = 0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-7, -7, 7, -7, 7, 7, -7, 7)
5:1/0 = 0
5:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-7, -7, 7, -7, 7, 7, -7, 7)
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
15:1/0 = 0
16:1/0 = 0
18:1/0 = 0
19:1/0 = 0
21:1/0 = 0
22:1/0 = 0
23:1/0 = 0
24:1/0 = 0
25:1/0 = 0
26:1/0 = 0
28:1/0 = 0
29:1/0 = 0
30:1/0 = 0
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-7, -7, 7, -7, 7, 7, -7, 7)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-7, -7, 7, -7, 7, 7, -7, 7)
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-7, -7, 7, -7, 7, 7, -7, 7)
4:2/0 = 0
4:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-7, -7, 7, -7, 7, 7, -7, 7)
5:2/0 = 0
5:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-7, -7, 7, -7, 7, 7, -7, 7)
21:2/0 = 0
22:2/0 = 0
23:2/0 = 0
25:2/0 = 0
26:2/0 = 0
28:2/0 = 0
29:2/0 = 0
30:2/0 = 0
0:3/0 = 0
1:3/0 = 0
4:3/0 = 0
5:3/0 = 0
9:3/0 = 0
10:3/0 = 0
15:3/0 = 0
16:3/0 = 0
21:3/0 = 0
22:3/0 = 0
25:3/0 = 0
26:3/0 = 0
28:3/0 = 0
29:3/0 = 0
30:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
17:4/0 = 0
21:4/0 = 0
22:4/0 = 0
23:4/0 = 0
24:4/0 = 0
25:4/0 = 0
26:4/0 = 0
28:4/0 = 0
29:4/0 = 0
30:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
7:5/0 = 0
8:5/0 = 0
10:5/0 = 0
11:5/0 = 0
13:5/0 = 0
14:5/0 = 0
16:5/0 = 0
17:5/0 = 0
21:5/0 = 0
22:5/0 = 0
23:5/0 = 0
24:5/0 = 0
25:5/0 = 0
26:5/0 = 0
9:6/0 = 0
10:6/0 = 0
15:6/0 = 0
16:6/0 = 0
2:7/0 = 0
3:7/0 = 0
9:7/0 = 0
10:7/0 = 0
15:7/0 = 0
16:7/0 = 0
22:7/0 = 0
23:7/0 = 0
27:7/0 = 0
28:7/0 = 0
29:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
9:8/0 = 0
10:8/0 = 0
22:8/0 = 0
23:8/0 = 0
27:8/0 = 0
28:8/0 = 0
29:8/0 = 0
0:9/0 = 0
1:9/0 = 0
4:9/0 = 0
5:9/0 = 0
13:9/0 = 0
14:9/0 = 0
15:9/0 = 0
16:9/0 = 0
18:9/0 = 0
19:9/0 = 0
20:9/0 = 0
22:9/0 = 0
23:9/0 = 0
27:9/0 = 0
28:9/0 = 0
29:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0
13:10/0 = 0
14:10/0 = 0
15:10/0 = 0
16:10/0 = 0
18:10/0 = 0
19:10/0 = 0
20:10/0 = 0
22:10/0 = 0
23:10/0 = 0
27:10/0 = 0
28:10/0 = 0
29:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
11:11/0 = 0
13:11/0 = 0
14:11/0 = 0
15:11/0 = 0
16:11/0 = 0
27:11/0 = 0
28:11/0 = 0
29:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
13:12/0 = 0
14:12/0 = 0
15:12/0 = 0
16:12/0 = 0
18:12/0 = 0
19:12/0 = 0
20:12/0 = 0
22:12/0 = 0
23:12/0 = 0
24:12/0 = 0
25:12/0 = 0
27:12/0 = 0
28:12/0 = 0
29:12/0 = 0
0:13/0 = 0
1:13/0 = 0
4:13/0 = 0
5:13/0 = 0
7:13/0 = 0
8:13/0 = 0
9:13/0 = 0
10:13/0 = 0
11:13/0 = 0
13:13/0 = 0
14:13/0 = 0
15:13/0 = 0
16:13/0 = 0
18:13/0 = 0
19:13/0 = 0
20:13/0 = 0
22:13/0 = 0
23:13/0 = 0
24:13/0 = 0
25:13/0 = 0
27:13/0 = 0
28:13/0 = 0
29:13/0 = 0
7:14/0 = 0
8:14/0 = 0
9:14/0 = 0
10:14/0 = 0
11:14/0 = 0
13:14/0 = 0
14:14/0 = 0
15:14/0 = 0
16:14/0 = 0
27:14/0 = 0
28:14/0 = 0
29:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
4:15/0 = 0
5:15/0 = 0
13:15/0 = 0
14:15/0 = 0
15:15/0 = 0
16:15/0 = 0
18:15/0 = 0
19:15/0 = 0
20:15/0 = 0
22:15/0 = 0
23:15/0 = 0
27:15/0 = 0
28:15/0 = 0
29:15/0 = 0
0:16/0 = 0
1:16/0 = 0
2:16/0 = 0
3:16/0 = 0
4:16/0 = 0
5:16/0 = 0
7:16/0 = 0
8:16/0 = 0
9:16/0 = 0
10:16/0 = 0
11:16/0 = 0
13:16/0 = 0
14:16/0 = 0
15:16/0 = 0
16:16/0 = 0
18:16/0 = 0
19:16/0 = 0
20:16/0 = 0
22:16/0 = 0
23:16/0 = 0
27:16/0 = 0
28:16/0 = 0
29:16/0 = 0
0:17/0 = 0
1:17/0 = 0
7:17/0 = 0
8:17/0 = 0
9:17/0 = 0
10:17/0 = 0
11:17/0 = 0
22:17/0 = 0
23:17/0 = 0
27:17/0 = 0
28:17/0 = 0
29:17/0 = 0
0:18/0 = 0
1:18/0 = 0
2:18/0 = 0
3:18/0 = 0
4:18/0 = 0
5:18/0 = 0
27:18/0 = 0
28:18/0 = 0
0:19/0 = 0
1:19/0 = 0
2:19/0 = 0
3:19/0 = 0
4:19/0 = 0
5:19/0 = 0
7:19/0 = 0
8:19/0 = 0
9:19/0 = 0
10:19/0 = 0
11:19/0 = 0
12:19/0 = 0
13:19/0 = 0
14:19/0 = 0
15:19/0 = 0
16:19/0 = 0
17:19/0 = 0
18:19/0 = 0
19:19/0 = 0
20:19/0 = 0
21:19/0 = 0
22:19/0 = 0
24:19/0 = 0
25:19/0 = 0
26:19/0 = 0
27:19/0 = 0
28:19/0 = 0
29:19/0 = 0
30:19/0 = 0
0:20/0 = 0
1:20/0 = 0
2:20/0 = 0
3:20/0 = 0
4:20/0 = 0
5:20/0 = 0
7:20/0 = 0
8:20/0 = 0
9:20/0 = 0
10:20/0 = 0
11:20/0 = 0
12:20/0 = 0
13:20/0 = 0
14:20/0 = 0
15:20/0 = 0
16:20/0 = 0
17:20/0 = 0
18:20/0 = 0
19:20/0 = 0
20:20/0 = 0
21:20/0 = 0
22:20/0 = 0
24:20/0 = 0
25:20/0 = 0
26:20/0 = 0
27:20/0 = 0
28:20/0 = 0
29:20/0 = 0
30:20/0 = 0
0:21/0 = 0
1:21/0 = 0
2:21/0 = 0
7:21/0 = 0
8:21/0 = 0
9:21/0 = 0
10:21/0 = 0
11:21/0 = 0
12:21/0 = 0
13:21/0 = 0
14:21/0 = 0
15:21/0 = 0
16:21/0 = 0
17:21/0 = 0
18:21/0 = 0
19:21/0 = 0
27:21/0 = 0
28:21/0 = 0
29:21/0 = 0
30:21/0 = 0

[sub_resource type="TileSet" id="TileSet_h6a5c"]
tile_size = Vector2i(14, 14)
physics_layer_0/collision_layer = 3
physics_layer_0/collision_mask = 3
sources/0 = SubResource("TileSetAtlasSource_55b44")

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_ls8dn"]
distance = 19.0

[node name="Main" type="Node2D"]
position = Vector2(102, 107)

[node name="CanvasLayer" type="CanvasLayer" parent="."]
process_priority = 5
script = ExtResource("1_xbgsd")

[node name="DeathLabel" type="Label" parent="CanvasLayer"]
visible = false
anchors_preset = -1
anchor_left = 0.017
anchor_top = -0.039
anchor_right = 0.017
anchor_bottom = -0.039
offset_left = 443.416
offset_top = 141.272
offset_right = 572.416
offset_bottom = 182.272
theme_override_styles/normal = SubResource("StyleBoxFlat_whqa0")
label_settings = SubResource("LabelSettings_o7kbe")

[node name="Button" type="Button" parent="CanvasLayer"]
clip_contents = true
layout_direction = 1
anchors_preset = -1
anchor_left = 0.033
anchor_top = -0.117
anchor_right = 0.033
anchor_bottom = -0.117
offset_left = 1058.98
offset_top = 94.816
offset_right = 1089.98
offset_bottom = 125.816
theme_override_styles/normal = SubResource("StyleBoxFlat_7x23e")

[node name="HealthBar" type="ProgressBar" parent="CanvasLayer"]
offset_left = 18.0
offset_top = 10.0
offset_right = 144.0
offset_bottom = 37.0

[node name="Background2" type="TileMapLayer" parent="."]
use_parent_material = true
position = Vector2(-26, -102)
scale = Vector2(2, 2)
tile_map_data = PackedByteArray("AAAJAAUAAAAAAAAAAAAdAAUAAAAAAAAAAAAxAAUAAAAAAAAAAAD1/wUAAAAAAAAAAAA=")
tile_set = SubResource("TileSet_082kf")

[node name="MID" type="TileMapLayer" parent="."]
use_parent_material = true
position = Vector2(-26, -102)
scale = Vector2(2, 2)
tile_map_data = PackedByteArray("AAD1/wUAAQAAAAAAAAAJAAUAAQAAAAAAAAAdAAUAAQAAAAAAAAAxAAUAAQAAAAAAAAA=")
tile_set = SubResource("TileSet_082kf")

[node name="Forground" type="TileMapLayer" parent="."]
use_parent_material = true
position = Vector2(-26, -102)
scale = Vector2(2, 2)
tile_map_data = PackedByteArray("AAD1/wUAAgAAAAAAAAAJAAUAAgAAAAAAAAAdAAUAAgAAAAAAAAAxAAUAAgAAAAAAAAA=")
tile_set = SubResource("TileSet_082kf")

[node name="2d ground" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAAoAAAAAAAAAAAABAAoAAAABAAAAAAACAAoAAAABAAAAAAADAAoAAAABAAAAAAAEAAoAAAABAAAAAAAFAAoAAAABAAAAAAAGAAoAAAABAAAAAAAHAAoAAAABAAAAAAAIAAoAAAABAAAAAAAJAAoAAAABAAAAAAAKAAoAAAABAAAAAAALAAoAAAABAAAAAAAMAAoAAAABAAAAAAANAAoAAAABAAAAAAAOAAoAAAABAAAAAAAPAAoAAAABAAAAAAAQAAoAAAABAAAAAAARAAoAAAABAAAAAAASAAoAAAABAAAAAAATAAoAAAABAAAAAAAUAAoAAAABAAAAAAAVAAoAAAABAAAAAAAWAAoAAAABAAAAAAAXAAoAAAABAAAAAAAYAAoAAAABAAAAAAAZAAoAAAABAAAAAAAaAAoAAAABAAAAAAAbAAoAAAABAAAAAAAcAAoAAAABAAAAAAAdAAoAAAABAAAAAAAeAAoAAAABAAAAAAAfAAoAAAABAAAAAAAgAAoAAAABAAAAAAAhAAoAAAABAAAAAAAiAAoAAAABAAAAAAAjAAoAAAABAAAAAAAkAAoAAAABAAAAAAAlAAoAAAABAAAAAAAmAAoAAAABAAAAAAAnAAoAAAABAAAAAAAoAAoAAAABAAAAAAApAAoAAAABAAAAAAAqAAoAAAABAAAAAAArAAoAAAABAAAAAAAsAAoAAAABAAAAAAAtAAoAAAABAAAAAAAuAAoAAAABAAAAAAAvAAoAAAABAAAAAAAwAAoAAAABAAAAAAAxAAoAAAABAAAAAAAyAAoAAAABAAAAAAAzAAoAAAABAAAAAAA0AAoAAAABAAAAAAA1AAoAAAABAAAAAAA2AAoAAAABAAAAAAA3AAoAAAABAAAAAAA4AAoAAAABAAAAAAA5AAoAAAABAAAAAAA6AAoAAAABAAAAAAA7AAoAAAABAAAAAAA8AAoAAAAFAAAAAAA9AAoAAAAAAAEAAAA9AAkAAAAAAAEAAAA9AAgAAAAAAAEAAAA9AAcAAAAAAAEAAAA9AAYAAAAAAAEAAAA9AAUAAAAAAAEAAAA9AAQAAAAAAAEAAAA9AAMAAAAAAAEAAAD//woAAAAFAAEAAAD//wkAAAAFAAEAAAD//wgAAAAFAAEAAAD//wcAAAAFAAEAAAD//wYAAAAFAAEAAAD//wUAAAAFAAEAAAD//wQAAAAFAAEAAAD//wMAAAAFAAEAAAAAAAsAAAAAAAEAAAAAAAwAAAAAAAEAAAAAAA0AAAAAAAEAAAAAAA4AAAAAAAEAAAAAAA8AAAAAAAEAAAAAABAAAAAAAAEAAAABAAsAAAABAAEAAAABAAwAAAABAAEAAAABAA0AAAABAAEAAAABAA4AAAABAAEAAAABAA8AAAABAAEAAAABABAAAAABAAEAAAACAAsAAAABAAEAAAADAAsAAAABAAEAAAAEAAsAAAABAAEAAAAFAAsAAAABAAEAAAAGAAsAAAABAAEAAAAHAAsAAAABAAEAAAAIAAsAAAABAAEAAAAJAAsAAAABAAEAAAAKAAsAAAABAAEAAAALAAsAAAABAAEAAAAMAAsAAAABAAEAAAANAAsAAAABAAEAAAAOAAsAAAABAAEAAAAPAAsAAAABAAEAAAAQAAsAAAABAAEAAAARAAsAAAABAAEAAAASAAsAAAABAAEAAAATAAsAAAABAAEAAAAUAAsAAAABAAEAAAAVAAsAAAABAAEAAAAWAAsAAAABAAEAAAAXAAsAAAABAAEAAAAYAAsAAAABAAEAAAAZAAsAAAABAAEAAAAaAAsAAAABAAEAAAAbAAsAAAABAAEAAAAcAAsAAAABAAEAAAAdAAsAAAABAAEAAAAeAAsAAAABAAEAAAAfAAsAAAABAAEAAAAgAAsAAAABAAEAAAAhAAsAAAABAAEAAAAiAAsAAAABAAEAAAAjAAsAAAABAAEAAAAkAAsAAAABAAEAAAAlAAsAAAABAAEAAAAmAAsAAAABAAEAAAAnAAsAAAABAAEAAAAoAAsAAAABAAEAAAApAAsAAAABAAEAAAAqAAsAAAABAAEAAAArAAsAAAABAAEAAAAsAAsAAAABAAEAAAAtAAsAAAABAAEAAAAuAAsAAAABAAEAAAAvAAsAAAABAAEAAAAwAAsAAAABAAEAAAAxAAsAAAABAAEAAAAyAAsAAAABAAEAAAAzAAsAAAABAAEAAAA0AAsAAAABAAEAAAA1AAsAAAABAAEAAAA2AAsAAAABAAEAAAA3AAsAAAABAAEAAAA4AAsAAAABAAEAAAA5AAsAAAABAAEAAAA6AAsAAAABAAEAAAA7AAsAAAABAAEAAAA8AAsAAAAFAAEAAAACAAwAAAABAAEAAAADAAwAAAABAAEAAAAEAAwAAAABAAEAAAAFAAwAAAABAAEAAAAGAAwAAAABAAEAAAAHAAwAAAABAAEAAAAIAAwAAAABAAEAAAAJAAwAAAABAAEAAAAKAAwAAAABAAEAAAALAAwAAAABAAEAAAAMAAwAAAABAAEAAAANAAwAAAABAAEAAAAOAAwAAAABAAEAAAAPAAwAAAABAAEAAAAQAAwAAAABAAEAAAARAAwAAAABAAEAAAASAAwAAAABAAEAAAATAAwAAAABAAEAAAAUAAwAAAABAAEAAAAVAAwAAAABAAEAAAAWAAwAAAABAAEAAAAXAAwAAAABAAEAAAAYAAwAAAABAAEAAAAZAAwAAAABAAEAAAAaAAwAAAABAAEAAAAbAAwAAAABAAEAAAAcAAwAAAABAAEAAAAdAAwAAAABAAEAAAAeAAwAAAABAAEAAAAfAAwAAAABAAEAAAAgAAwAAAABAAEAAAAhAAwAAAABAAEAAAAiAAwAAAABAAEAAAAjAAwAAAABAAEAAAAkAAwAAAABAAEAAAAlAAwAAAABAAEAAAAmAAwAAAABAAEAAAAnAAwAAAABAAEAAAAoAAwAAAABAAEAAAApAAwAAAABAAEAAAAqAAwAAAABAAEAAAArAAwAAAABAAEAAAAsAAwAAAABAAEAAAAtAAwAAAABAAEAAAAuAAwAAAABAAEAAAAvAAwAAAABAAEAAAAwAAwAAAABAAEAAAAxAAwAAAABAAEAAAAyAAwAAAABAAEAAAAzAAwAAAABAAEAAAA0AAwAAAABAAEAAAA1AAwAAAABAAEAAAA2AAwAAAABAAEAAAA3AAwAAAABAAEAAAA4AAwAAAABAAEAAAA5AAwAAAABAAEAAAA6AAwAAAABAAEAAAA7AAwAAAABAAEAAAA8AAwAAAAFAAEAAAACAA0AAAABAAEAAAADAA0AAAABAAEAAAAEAA0AAAABAAEAAAAFAA0AAAABAAEAAAAGAA0AAAABAAEAAAAHAA0AAAABAAEAAAAIAA0AAAABAAEAAAAJAA0AAAABAAEAAAAKAA0AAAABAAEAAAALAA0AAAABAAEAAAAMAA0AAAABAAEAAAANAA0AAAABAAEAAAAOAA0AAAABAAEAAAAPAA0AAAABAAEAAAAQAA0AAAABAAEAAAARAA0AAAABAAEAAAASAA0AAAABAAEAAAATAA0AAAABAAEAAAAUAA0AAAABAAEAAAAVAA0AAAABAAEAAAAWAA0AAAABAAEAAAAXAA0AAAABAAEAAAAYAA0AAAABAAEAAAAZAA0AAAABAAEAAAAaAA0AAAABAAEAAAAbAA0AAAABAAEAAAAcAA0AAAABAAEAAAAdAA0AAAABAAEAAAAeAA0AAAABAAEAAAAfAA0AAAABAAEAAAAgAA0AAAABAAEAAAAhAA0AAAABAAEAAAAiAA0AAAABAAEAAAAjAA0AAAABAAEAAAAkAA0AAAABAAEAAAAlAA0AAAABAAEAAAAmAA0AAAABAAEAAAAnAA0AAAABAAEAAAAoAA0AAAABAAEAAAApAA0AAAABAAEAAAAqAA0AAAABAAEAAAArAA0AAAABAAEAAAAsAA0AAAABAAEAAAAtAA0AAAABAAEAAAAuAA0AAAABAAEAAAAvAA0AAAABAAEAAAAwAA0AAAABAAEAAAAxAA0AAAABAAEAAAAyAA0AAAABAAEAAAAzAA0AAAABAAEAAAA0AA0AAAABAAEAAAA1AA0AAAABAAEAAAA2AA0AAAABAAEAAAA3AA0AAAABAAEAAAA4AA0AAAABAAEAAAA5AA0AAAABAAEAAAA6AA0AAAABAAEAAAA7AA0AAAABAAEAAAA8AA0AAAAFAAEAAAACAA4AAAABAAEAAAADAA4AAAABAAEAAAAEAA4AAAABAAEAAAAFAA4AAAABAAEAAAAGAA4AAAABAAEAAAAHAA4AAAABAAEAAAAIAA4AAAABAAEAAAAJAA4AAAABAAEAAAAKAA4AAAABAAEAAAALAA4AAAABAAEAAAAMAA4AAAABAAEAAAANAA4AAAABAAEAAAAOAA4AAAABAAEAAAAPAA4AAAABAAEAAAAQAA4AAAABAAEAAAARAA4AAAABAAEAAAASAA4AAAABAAEAAAATAA4AAAABAAEAAAAUAA4AAAABAAEAAAAVAA4AAAABAAEAAAAWAA4AAAABAAEAAAAXAA4AAAABAAEAAAAYAA4AAAABAAEAAAAZAA4AAAABAAEAAAAaAA4AAAABAAEAAAAbAA4AAAABAAEAAAAcAA4AAAABAAEAAAAdAA4AAAABAAEAAAAeAA4AAAABAAEAAAAfAA4AAAABAAEAAAAgAA4AAAABAAEAAAAhAA4AAAABAAEAAAAiAA4AAAABAAEAAAAjAA4AAAABAAEAAAAkAA4AAAABAAEAAAAlAA4AAAABAAEAAAAmAA4AAAABAAEAAAAnAA4AAAABAAEAAAAoAA4AAAABAAEAAAApAA4AAAABAAEAAAAqAA4AAAABAAEAAAArAA4AAAABAAEAAAAsAA4AAAABAAEAAAAtAA4AAAABAAEAAAAuAA4AAAABAAEAAAAvAA4AAAABAAEAAAAwAA4AAAABAAEAAAAxAA4AAAABAAEAAAAyAA4AAAABAAEAAAAzAA4AAAABAAEAAAA0AA4AAAABAAEAAAA1AA4AAAABAAEAAAA2AA4AAAABAAEAAAA3AA4AAAABAAEAAAA4AA4AAAABAAEAAAA5AA4AAAABAAEAAAA6AA4AAAABAAEAAAA7AA4AAAABAAEAAAA8AA4AAAAFAAEAAAACAA8AAAABAAEAAAADAA8AAAABAAEAAAAEAA8AAAABAAEAAAAFAA8AAAABAAEAAAAGAA8AAAABAAEAAAAHAA8AAAABAAEAAAAIAA8AAAABAAEAAAAJAA8AAAABAAEAAAAKAA8AAAABAAEAAAALAA8AAAABAAEAAAAMAA8AAAABAAEAAAANAA8AAAABAAEAAAAOAA8AAAABAAEAAAAPAA8AAAABAAEAAAAQAA8AAAABAAEAAAARAA8AAAABAAEAAAASAA8AAAABAAEAAAATAA8AAAABAAEAAAAUAA8AAAABAAEAAAAVAA8AAAABAAEAAAAWAA8AAAABAAEAAAAXAA8AAAABAAEAAAAYAA8AAAABAAEAAAAZAA8AAAABAAEAAAAaAA8AAAABAAEAAAAbAA8AAAABAAEAAAAcAA8AAAABAAEAAAAdAA8AAAABAAEAAAAeAA8AAAABAAEAAAAfAA8AAAABAAEAAAAgAA8AAAABAAEAAAAhAA8AAAABAAEAAAAiAA8AAAABAAEAAAAjAA8AAAABAAEAAAAkAA8AAAABAAEAAAAlAA8AAAABAAEAAAAmAA8AAAABAAEAAAAnAA8AAAABAAEAAAAoAA8AAAABAAEAAAApAA8AAAABAAEAAAAqAA8AAAABAAEAAAArAA8AAAABAAEAAAAsAA8AAAABAAEAAAAtAA8AAAABAAEAAAAuAA8AAAABAAEAAAAvAA8AAAABAAEAAAAwAA8AAAABAAEAAAAxAA8AAAABAAEAAAAyAA8AAAABAAEAAAAzAA8AAAABAAEAAAA0AA8AAAABAAEAAAA1AA8AAAABAAEAAAA2AA8AAAABAAEAAAA3AA8AAAABAAEAAAA4AA8AAAABAAEAAAA5AA8AAAABAAEAAAA6AA8AAAABAAEAAAA7AA8AAAABAAEAAAA8AA8AAAAFAAEAAAA8ABAAAAAFAAEAAAA7ABAAAAABAAEAAAA6ABAAAAABAAEAAAA5ABAAAAABAAEAAAA4ABAAAAABAAEAAAA3ABAAAAABAAEAAAA2ABAAAAABAAEAAAA1ABAAAAABAAEAAAA0ABAAAAABAAEAAAAzABAAAAABAAEAAAAyABAAAAABAAEAAAAxABAAAAABAAEAAAAwABAAAAABAAEAAAAvABAAAAABAAEAAAAuABAAAAABAAEAAAAtABAAAAABAAEAAAAsABAAAAABAAEAAAArABAAAAABAAEAAAAqABAAAAABAAEAAAApABAAAAABAAEAAAAoABAAAAABAAEAAAAnABAAAAABAAEAAAAmABAAAAABAAEAAAAlABAAAAABAAEAAAAkABAAAAABAAEAAAAjABAAAAABAAEAAAAiABAAAAABAAEAAAAhABAAAAABAAEAAAAgABAAAAABAAEAAAAfABAAAAABAAEAAAAeABAAAAABAAEAAAAdABAAAAABAAEAAAAcABAAAAABAAEAAAAbABAAAAABAAEAAAAaABAAAAABAAEAAAAZABAAAAABAAEAAAAYABAAAAABAAEAAAAXABAAAAABAAEAAAAWABAAAAABAAEAAAAVABAAAAABAAEAAAAUABAAAAABAAEAAAATABAAAAABAAEAAAASABAAAAABAAEAAAARABAAAAABAAEAAAAQABAAAAABAAEAAAAPABAAAAABAAEAAAAOABAAAAABAAEAAAANABAAAAABAAEAAAAMABAAAAABAAEAAAALABAAAAABAAEAAAAKABAAAAABAAEAAAAJABAAAAABAAEAAAAIABAAAAABAAEAAAAHABAAAAABAAEAAAAGABAAAAABAAEAAAAFABAAAAABAAEAAAAEABAAAAABAAEAAAADABAAAAABAAEAAAACABAAAAABAAEAAAA=")
tile_set = SubResource("TileSet_h6a5c")

[node name="Player" parent="." instance=ExtResource("2_a3l6r")]
position = Vector2(61, 84)

[node name="AnimatedSprite2D" parent="Player" index="0"]
animation = &"attack"
frame_progress = 0.325807

[node name="Enemy1" parent="." instance=ExtResource("3_k5m7y")]
position = Vector2(446, 95)
scale = Vector2(2, 2)

[node name="EnemyHealthBar" type="ProgressBar" parent="Enemy1"]
offset_left = -20.0
offset_top = -31.0
offset_right = 125.0
offset_bottom = -4.0
scale = Vector2(0.3, 0.3)
script = ExtResource("9_82wmc")

[node name="Killzone" parent="." instance=ExtResource("7_7m2o6")]
position = Vector2(-82, 260)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Killzone"]
position = Vector2(-2, 10)
shape = SubResource("WorldBoundaryShape2D_ls8dn")

[connection signal="pressed" from="CanvasLayer/Button" to="CanvasLayer" method="_on_button_pressed"]

[editable path="Player"]
[editable path="Enemy1"]
[editable path="Killzone"]
